--- a/invenio_users_resources/translations/de/LC_MESSAGES/messages.po
+++ b/invenio_users_resources/translations/de/LC_MESSAGES/messages.po
@@ -1,25 +1,28 @@
-# German translations for invenio-users-resources.
+# Translations template for invenio-users-resources.
 # Copyright (C) 2022 CERN
 # This file is distributed under the same license as the
 # invenio-users-resources project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
-#
+# 
+# Translators:
+# Hermann Schranzhofer <hermann.schranzhofer@tugraz.at>, 2022
+# 
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: invenio-users-resources 0.1.0\n"
 "Report-Msgid-Bugs-To: info@inveniosoftware.org\n"
 "POT-Creation-Date: 2022-02-16 12:54+0100\n"
-"PO-Revision-Date: 2022-02-16 12:58+0100\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: de\n"
-"Language-Team: de <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"PO-Revision-Date: 2022-02-16 11:58+0000\n"
+"Last-Translator: Hermann Schranzhofer <hermann.schranzhofer@tugraz.at>, 2022\n"
+"Language-Team: German (https://www.transifex.com/inveniosoftware/teams/23537/de/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: invenio_users_resources/services/schemas.py:20
 msgid "Value must be either 'public' or 'restricted'."
-msgstr ""
-
+msgstr "Wert muss entweder 'öffentlich' oder 'eingeschränkt' sein."
