--- a/invenio_users_resources/translations/de/LC_MESSAGES/messages.po
+++ b/invenio_users_resources/translations/de/LC_MESSAGES/messages.po
@@ -5,24 +5,33 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 # 
 # Translators:
-# Hermann Schranzhofer <hermann.schranzhofer@tugraz.at>, 2022
+# Alizee Pace <alizee.pace@gmail.com>, 2022
+# chriz_uniba <christina.zeller@uni-bamberg.de>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: invenio-users-resources 0.1.0\n"
+"Project-Id-Version: invenio-users-resources 0.1.10\n"
 "Report-Msgid-Bugs-To: info@inveniosoftware.org\n"
-"POT-Creation-Date: 2022-02-16 12:54+0100\n"
+"POT-Creation-Date: 2022-05-25 14:44+0200\n"
 "PO-Revision-Date: 2022-02-16 11:58+0000\n"
-"Last-Translator: Hermann Schranzhofer <hermann.schranzhofer@tugraz.at>, 2022\n"
+"Last-Translator: chriz_uniba <christina.zeller@uni-bamberg.de>, 2022\n"
 "Language-Team: German (https://www.transifex.com/inveniosoftware/teams/23537/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
+"Generated-By: Babel 2.10.1\n"
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: invenio_users_resources/services/schemas.py:20
+#: invenio_users_resources/services/schemas.py:21
 msgid "Value must be either 'public' or 'restricted'."
-msgstr "Wert muss entweder 'öffentlich' oder 'eingeschränkt' sein."
+msgstr "Wert muss entweder \"öffentlich\" oder \"eingeschränkt\" sein."
+
+#: invenio_users_resources/services/groups/config.py:45
+msgid "Best match"
+msgstr "Höchste Übereinstimmung"
+
+#: invenio_users_resources/services/groups/config.py:49
+msgid "Name"
+msgstr "Name"
