--- a/invenio_users_resources/translations/es/LC_MESSAGES/messages.po
+++ b/invenio_users_resources/translations/es/LC_MESSAGES/messages.po
@@ -5,8 +5,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 # 
 # Translators:
+# Jesús Martín <jesusmartin@sallep.net>, 2022
 # Alizee Pace <alizee.pace@gmail.com>, 2022
-# chriz_uniba <christina.zeller@uni-bamberg.de>, 2022
 # 
 #, fuzzy
 msgid ""
@@ -15,23 +15,23 @@ msgstr ""
 "Report-Msgid-Bugs-To: info@inveniosoftware.org\n"
 "POT-Creation-Date: 2022-10-12 12:12+0000\n"
 "PO-Revision-Date: 2022-02-16 11:58+0000\n"
-"Last-Translator: chriz_uniba <christina.zeller@uni-bamberg.de>, 2022\n"
-"Language-Team: German (https://www.transifex.com/inveniosoftware/teams/23537/de/)\n"
+"Last-Translator: Alizee Pace <alizee.pace@gmail.com>, 2022\n"
+"Language-Team: Spanish (https://www.transifex.com/inveniosoftware/teams/23537/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.10.3\n"
-"Language: de\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
 #: invenio_users_resources/services/schemas.py:21
 msgid "Value must be either 'public' or 'restricted'."
-msgstr "Wert muss entweder \"öffentlich\" oder \"eingeschränkt\" sein."
+msgstr "El valor debe ser o 'público' o 'restringido'."
 
 #: invenio_users_resources/services/groups/config.py:43
 msgid "Best match"
-msgstr "Höchste Übereinstimmung"
+msgstr "Mejor coincidencia"
 
 #: invenio_users_resources/services/groups/config.py:47
 msgid "Name"
-msgstr "Name"
+msgstr "Nombre"
