--- a/invenio_users_resources/translations/hu/LC_MESSAGES/messages.po
+++ b/invenio_users_resources/translations/hu/LC_MESSAGES/messages.po
@@ -5,8 +5,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 # 
 # Translators:
-# Alizee Pace <alizee.pace@gmail.com>, 2022
-# chriz_uniba <christina.zeller@uni-bamberg.de>, 2022
+# Andrea Dömötör, 2022
 # 
 #, fuzzy
 msgid ""
@@ -15,23 +14,23 @@ msgstr ""
 "Report-Msgid-Bugs-To: info@inveniosoftware.org\n"
 "POT-Creation-Date: 2022-10-12 12:12+0000\n"
 "PO-Revision-Date: 2022-02-16 11:58+0000\n"
-"Last-Translator: chriz_uniba <christina.zeller@uni-bamberg.de>, 2022\n"
-"Language-Team: German (https://www.transifex.com/inveniosoftware/teams/23537/de/)\n"
+"Last-Translator: Andrea Dömötör, 2022\n"
+"Language-Team: Hungarian (https://www.transifex.com/inveniosoftware/teams/23537/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.10.3\n"
-"Language: de\n"
+"Language: hu\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: invenio_users_resources/services/schemas.py:21
 msgid "Value must be either 'public' or 'restricted'."
-msgstr "Wert muss entweder \"öffentlich\" oder \"eingeschränkt\" sein."
+msgstr "Az érték 'nyilvános' vagy 'korlátozott' lehet."
 
 #: invenio_users_resources/services/groups/config.py:43
 msgid "Best match"
-msgstr "Höchste Übereinstimmung"
+msgstr "Legjobb találat"
 
 #: invenio_users_resources/services/groups/config.py:47
 msgid "Name"
-msgstr "Name"
+msgstr "Név"
