--- a/invenio_users_resources/translations/zh_CN/LC_MESSAGES/messages.po
+++ b/invenio_users_resources/translations/zh_CN/LC_MESSAGES/messages.po
@@ -5,8 +5,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 # 
 # Translators:
-# Alizee Pace <alizee.pace@gmail.com>, 2022
-# chriz_uniba <christina.zeller@uni-bamberg.de>, 2022
+# Tibor Simko <tibor.simko@cern.ch>, 2022
+# Kalven Richie, 2022
 # 
 #, fuzzy
 msgid ""
@@ -15,23 +15,23 @@ msgstr ""
 "Report-Msgid-Bugs-To: info@inveniosoftware.org\n"
 "POT-Creation-Date: 2022-10-12 12:12+0000\n"
 "PO-Revision-Date: 2022-02-16 11:58+0000\n"
-"Last-Translator: chriz_uniba <christina.zeller@uni-bamberg.de>, 2022\n"
-"Language-Team: German (https://www.transifex.com/inveniosoftware/teams/23537/de/)\n"
+"Last-Translator: Kalven Richie, 2022\n"
+"Language-Team: Chinese (China) (https://www.transifex.com/inveniosoftware/teams/23537/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.10.3\n"
-"Language: de\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: zh_CN\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: invenio_users_resources/services/schemas.py:21
 msgid "Value must be either 'public' or 'restricted'."
-msgstr "Wert muss entweder \"öffentlich\" oder \"eingeschränkt\" sein."
+msgstr "值必须为“public”或“restricted”。"
 
 #: invenio_users_resources/services/groups/config.py:43
 msgid "Best match"
-msgstr "Höchste Übereinstimmung"
+msgstr "最佳匹配"
 
 #: invenio_users_resources/services/groups/config.py:47
 msgid "Name"
-msgstr "Name"
+msgstr "名称"
