--- a/invenio_users_resources/translations/ar/LC_MESSAGES/messages.po
+++ b/invenio_users_resources/translations/ar/LC_MESSAGES/messages.po
@@ -6,7 +6,7 @@
 # 
 # Translators:
 # Bessem Aamira <bessemamira@gmail.com>, 2022
-# Tibor Simko <tibor.simko@cern.ch>, 2022
+# Salaheddine Ben Ali <salaheddine.benali@cnudst.tn>, 2023
 # 
 #, fuzzy
 msgid ""
@@ -15,8 +15,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: info@inveniosoftware.org\n"
 "POT-Creation-Date: 2022-10-12 12:12+0000\n"
 "PO-Revision-Date: 2022-02-16 11:58+0000\n"
-"Last-Translator: Tibor Simko <tibor.simko@cern.ch>, 2022\n"
-"Language-Team: Arabic (https://www.transifex.com/inveniosoftware/teams/23537/ar/)\n"
+"Last-Translator: Salaheddine Ben Ali <salaheddine.benali@cnudst.tn>, 2023\n"
+"Language-Team: Arabic (https://app.transifex.com/inveniosoftware/teams/23537/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -26,7 +26,7 @@ msgstr ""
 
 #: invenio_users_resources/services/schemas.py:21
 msgid "Value must be either 'public' or 'restricted'."
-msgstr "يجب أن تكون القيمة إما \"عامة\" أو \"مقيدة\"."
+msgstr "يجب أن تكون القيمة إما 'عامة' أو 'مقيدة'."
 
 #: invenio_users_resources/services/groups/config.py:43
 msgid "Best match"
@@ -34,4 +34,4 @@ msgstr "أفضل تطابق "
 
 #: invenio_users_resources/services/groups/config.py:47
 msgid "Name"
-msgstr "اسم"
+msgstr "إسم"
