--- a/invenio_users_resources/translations/es/LC_MESSAGES/messages.po
+++ b/invenio_users_resources/translations/es/LC_MESSAGES/messages.po
@@ -16,7 +16,7 @@ msgstr ""
 "POT-Creation-Date: 2022-10-12 12:12+0000\n"
 "PO-Revision-Date: 2022-02-16 11:58+0000\n"
 "Last-Translator: Alizee Pace <alizee.pace@gmail.com>, 2022\n"
-"Language-Team: Spanish (https://www.transifex.com/inveniosoftware/teams/23537/es/)\n"
+"Language-Team: Spanish (https://app.transifex.com/inveniosoftware/teams/23537/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
