--- a/invenio_users_resources/translations/ro/LC_MESSAGES/messages.po
+++ b/invenio_users_resources/translations/ro/LC_MESSAGES/messages.po
@@ -6,6 +6,7 @@
 # 
 # Translators:
 # Tibor Simko <tibor.simko@cern.ch>, 2022
+# Nicolaie Constantinescu, 2023
 # 
 #, fuzzy
 msgid ""
@@ -14,8 +15,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: info@inveniosoftware.org\n"
 "POT-Creation-Date: 2022-10-12 12:12+0000\n"
 "PO-Revision-Date: 2022-02-16 11:58+0000\n"
-"Last-Translator: Tibor Simko <tibor.simko@cern.ch>, 2022\n"
-"Language-Team: Romanian (https://www.transifex.com/inveniosoftware/teams/23537/ro/)\n"
+"Last-Translator: Nicolaie Constantinescu, 2023\n"
+"Language-Team: Romanian (https://app.transifex.com/inveniosoftware/teams/23537/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,7 +26,7 @@ msgstr ""
 
 #: invenio_users_resources/services/schemas.py:21
 msgid "Value must be either 'public' or 'restricted'."
-msgstr ""
+msgstr "Valoare trebui să fie ori „public”, ori „restricționat”."
 
 #: invenio_users_resources/services/groups/config.py:43
 msgid "Best match"
