--- a/invenio_users_resources/translations/uk/LC_MESSAGES/messages.po
+++ b/invenio_users_resources/translations/uk/LC_MESSAGES/messages.po
@@ -4,6 +4,9 @@
 # invenio-users-resources project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 # 
+# Translators:
+# Vasyl Ostrovskyi <vasyusya@yahoo.com>, 2023
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -11,7 +14,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: info@inveniosoftware.org\n"
 "POT-Creation-Date: 2022-10-12 12:12+0000\n"
 "PO-Revision-Date: 2022-02-16 11:58+0000\n"
-"Language-Team: Ukrainian (https://www.transifex.com/inveniosoftware/teams/23537/uk/)\n"
+"Last-Translator: Vasyl Ostrovskyi <vasyusya@yahoo.com>, 2023\n"
+"Language-Team: Ukrainian (https://app.transifex.com/inveniosoftware/teams/23537/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,8 +29,8 @@ msgstr ""
 
 #: invenio_users_resources/services/groups/config.py:43
 msgid "Best match"
-msgstr ""
+msgstr "Найкраща відповідність"
 
 #: invenio_users_resources/services/groups/config.py:47
 msgid "Name"
-msgstr ""
+msgstr "Назва"
